MODINV-1213 ECS: Moving holdings to another instance produces error if the instance does not already have an associated holdings with active affiliation (#836)
* MODINV-1155 Add missing required interfaces to Module Descriptor

* remove redundant check
https://folio-org.atlassian.net/browse/MODINV-1213

* add logs

* change error msg

(cherry picked from commit 3d562f01556a760716a2d8b3e272f7ad34798cc3)